# tailii-host

./: LICENSE  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
protocol/: approval-protocol-v0.ndjson  approval-protocol-v1.ndjson  approval-protocol-v2.ndjson  backend-v1.ndjson  git-file-browser-v1.ndjson  pairing-code-v1.md  pairing-payload-v1.json  pairing-payload-v2.json  pairing-payload-v3.json  pane-choice-v1.ndjson  serve-list-v1.ndjson
quic-gw/: Cargo.toml
quic-gw/npm/: .gitignore  README.md  RELEASING.md
quic-gw/npm/darwin-arm64/: package.json
quic-gw/npm/darwin-x64/: package.json
quic-gw/src/: lib.rs  main.rs
quic-gw/tests/: interop.rs
scripts/: set-version.mjs  stage-prebuilt.mjs
src/: apnsConfigStore.ts  apnsJwtProvider.ts  apnsSender.ts  approvalPushNotifier.ts  broker.ts  chatTailController.ts  claudeSessionStore.ts  cli.ts  codexAppServer.ts  codexNativeTurnController.ts  codexRolloutTailer.ts  codexSessionStore.ts  codexToolActivity.ts  codexUsage.ts  deviceTokenStore.ts  dirLister.ts  doctor.ts  engine.ts  engineRelaySocket.ts  fileService.ts  gitService.ts  heartbeat.ts  herdr.ts  hook.ts  hookSettings.ts  hubClient.ts  hubDaemon.ts  hubProtocol.ts  idleReaper.ts  imageService.ts  kick.ts  launch.ts  legacyHomeMigration.ts  lineWriter.ts  observationLog.ts  officialApps.ts  pairingCode.ts  panePreviewPump.ts  paths.ts  permissionMode.ts  (+28 more)
test/: broker.test.ts  brokerHookIntegration.test.ts  chatTailControllerCodex.test.ts  chatTailControllerReadImage.test.ts  codexAppServer.test.ts  codexRolloutTailer.test.ts  (+38 more)
(+2 files in other folders)
