[package]
name = "tailii-quic-gw"
version = "0.1.0"
edition = "2021"
description = "Tailii QUIC gateway — auth + exec/tcp piping. Wire spec: docs/quic-transport.md"
publish = false

[dependencies]
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring", "log"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std"] }
rustls-pemfile = "2"
rcgen = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "time", "signal", "net", "process", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
anyhow = "1"
libc = "0.2"

[profile.release]
lto = true
